Revision history for Test-CGI-Multipart

v0.0.2  Sun Sep 11
       Updating dependencies. Made perlcritic.t an author only test.

v0.0.1  Sun Jun 27 00:06:07 2010
       Initial release.
