@@ -113,10 +113,10 @@ This document describes Test::CGI::Multipart::Gen::Image version 0.0.2
   
 =head1 DESCRIPTION
 
-    This is a callback package for L<Test::CGI::Multipart> that facilitates 
-    the testing of the upload of text files of a given size and sample content.
-    One can specify the dimensions of the image and the size, font and colours
-    of a simple string.
+This is a callback package for L<Test::CGI::Multipart> that facilitates 
+the testing of the upload of text files of a given size and sample content.
+One can specify the dimensions of the image and the size, font and colours
+of a simple string.
 
 =head1 INTERFACE 
 
